--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio - Simulador Interactivo - IMC</title>
+    <title>Desafio Javascript - Arrays</title>
 </head>
 <body>
-    <h1>Desafío Entregable - Javascript</h1>
-    <h2>Indice de masa corporal</h2>
-    <h3>Hola Mundo, que tengas buen día</h3>
+    <h1>Desafio Javascript - Arrays</h1>
+    <h2>Hola Mundo</h2>
     <script src="./js/main.js"></script>
-</body>
 </html>
