--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio Javascript - Arrays</title>
+    <title>Primer entrega del Proyecto Final</title>
 </head>
 <body>
-    <h1>Desafio Javascript - Arrays</h1>
+    <h1>Primer entrega del Proyecto Final</h1>
     <h2>Hola Mundo</h2>
     <script src="./js/main.js"></script>
 </html>
