Segunda Entrega del Proyecto Final

--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -81,6 +81,12 @@
       <div id="productos" class="row row-cols-md-3 text-center productos">
         <!--Aquí inyecto mi codigo JS-->
       </div>
+      <div id="cartContainer" class="cartContainer">
+        <!-- Codigo inyectado desde JS -->
+      </div>
+      <div class="botonVaciarCarrito">
+        <!--Aquí inyecto mi codigo JS-->
+      </div>
     </main>
 
 <!--Comienzo Footer-->
@@ -102,6 +108,7 @@
 </footer>
 <!--Fin Footer-->
 <!--Enlace a JS-->
+<script src="../js/datos.js"></script>
 <script src="../js/main.js"></script>
 </body>
 </html>
