Agregue un SweetAlert en el boton Vaciar carrito

--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -108,7 +108,9 @@
 </footer>
 <!--Fin Footer-->
 <!--Enlace a JS-->
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="../js/datos.js"></script>
 <script src="../js/main.js"></script>
+
 </body>
 </html>
